fix styles for legibility

--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,35 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+.app {
+  text-align: center;
+  margin-top: 50px;
+}
+
+form {
+  margin-bottom: 10px;
+}
+
+input {
+  margin-right: 10px;
+}
+
+p {
+  margin: 0;
+}
+
+button {
+  margin-bottom: 20px;
+}
+
+.login__welcome {
+  margin-bottom: 30px;
+}
+
+.register__welcome {
+  margin-bottom: 30px;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
